frontend/src/components/MainPage/MainPage.css
.main-page-container {
    display: flex;
    background: #36393f;
    height: 100vh; 
    width: 100vw; 
    overflow: hidden; 
}

.server-list {
    background: #202225;
    float: left;
    width: 72px;
    flex-shrink: 0;
}


.link,
.link.new {
    width: 48px;
    height: 48px;
    border-radius: 50%; 
    background: #36393f;
}

.server-list {
    display: flex; 
    flex-direction: column; 
    align-items: center; 
    gap: 8px; 
    padding-top: 12px;
}

.server-list hr {
    display: block;
    width: 32px;
    height: 2px;
    border-radius: 196px;
    border: none;
    background: #36393f;
}

  
.link:hover,
.link.active {
  border-radius: 25%;
  background: #5865f2;
}

.link:hover,
.link.new {
    transition: border-radius 250ms, background 250ms;
}

.link {
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: 'gg sans';
    text-decoration: none;
    color: white;
    font-size: 18px;
}

.link img {
    width: 30px;
}

.link.new {
    color: #23a559;
    font-size: 36px;
}

.link.new:hover {
    color:white;
    background-color: #3ba55d;
    border-radius: 25%;
    cursor: pointer;
}

.sidebar {
    display: flex;
    flex-direction: column;
    min-height: 0;
    width: 240px;
    flex: 0 0 auto;
    overflow: hidden;
    background: hsl(220 calc( 1 * 6.5%) 18% / 1);
}

.new-server-container {
    background-color: hsl(223 calc( 1 * 6.7%) 20.6% / 1);
    border-radius: 4px;
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    pointer-events: all;
    position: relative;
    z-index: 1000;
    flex-direction: column;
    backface-visibility: hidden;
    width: 440px;
    position: fixed;
    transform: translate(-50%, -50%);
    top: 50%;
    left: 50%;
    border-radius: 12px;
}

.overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(0px);
    z-index: 999;
}

.content {
    flex-grow: 1;
    background-color: #2f3136;
    overflow-y: auto;
}

